2011-09-14  Cesar Strauss  <cestrauss@gmail.com>

	Update & publish mingw32-pthreads-w32 and mingw32-gcc4.

	* mingw32/mingw32-gcc4.xml: Update to 4.6.1-1.
	* mingw32/mingw32-pthreads-w32.xml (mingw32-libpthreadgc): Fix typo. 
	* mingw32/issue.log: Updated accordingly.

2011-08-26  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Add msys-rsync, msys-diffstat, msys-help2man.

	* msys/msys-rsync.xml: New file (version 3.0.8).
	* msys/msys-diffstat.xml: New file (version 1.54).
	* msys/msys-help2man.xml: New file (version 1.40.4).
	* msys/msys-package-list.xml: Add new manifests.
	* msys/mingw-developer-toolkit.xml: Add rsync and diffstat.
	* msys/issue.log: Updated accordingly.

2011-08-23  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingwrt.

	* mingw32/mingw32-runtime.xml: Update mingwrt to 3.20.
	* mingw32/issue.log: Updated accordingly.

2011-08-20  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingwrt.

	* mingw32/mingw32-runtime.xml: Update mingwrt to 3.19.
	* mingw32/issue.log: Updated accordingly.

2011-08-05  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-binutils.

	* mingw32/mingw32-binutils.xml: Update to 2.21.53-1.
	* mingw32/issue.log: Updated accordingly.

2011-08-04  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-binutils.

	* mingw32/mingw32-binutils.xml: Update to 2.21.1-2.
	* mingw32/issue.log: Updated accordingly.

2011-08-04  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-gdb.

	* mingw32/mingw32-gdb.xml: Update to 7.3-2.
	* mingw32/issue.log: Updated accordingly.

2011-08-01  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-gdb.

	* mingw32/mingw32-gdb.xml: Update to 7.3-1.
	* mingw32/issue.log: Updated accordingly.

2011-07-31  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish msys-mintty.

	* msys/msys-mintty.xml: Update to 1.0.1-1.