@@ -33,7 +33,7 @@
   07b4037fb26f3015890c27e07f6e292bba1c2dbb 2010090600 mingw32-cygutils.xml
   f22aef52f7062813148d3ea1f4477b7ee05f5f5a 2010052100 mingw32-expat.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
-  ee2808e06098b8f3316eab85aece0b63f442ff3a 2011091400 mingw32-gcc4.xml
+  8bb891214b354f906db82e4b5bf72c6d655562f2 2011091500 mingw32-gcc4.xml
   88ed082418ab8bca93cf99396aee9ecaaed1c0df 2011080400 mingw32-gdb.xml
   432e7e89cfc138836b6b39930d81c5d054882ea4 2010090600 mingw32-gendef.xml
   7244fccd3713760a3afda6b9e4908a9610a645b3 2010090600 mingw32-gettext.xml
